--- a/app/src/main/res/layout/activity_word_more_2.xml
+++ b/app/src/main/res/layout/activity_word_more_2.xml
@@ -32,48 +32,132 @@
         android:layout_height="650dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-        <ScrollView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="10dp"
+            app:cardBackgroundColor="#FFFFFF"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="2dp"
+            app:cardUseCompatPadding="true">
 
-            <LinearLayout
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/wn"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="단어"
-                    android:textColor="@color/darker_gray_to_white"
-                    android:layout_margin="20dp"
-                    android:textSize="30dp"
-                    android:fontFamily="@font/pretendard_bold"
-                    tools:ignore="MissingPrefix" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/wm"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scrollbars="vertical"
-                    android:text="설명"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:textColor="@color/darker_gray_to_white"
-                    android:textSize="25dp"
-                    android:fontFamily="@font/pretendard_regular"
-                    tools:ignore="MissingPrefix" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
+                        <TextView
+                            android:id="@+id/wn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="20dp"
+                            android:fontFamily="@font/pretendard_bold"
+                            android:text="단어"
+                            android:textColor="@color/darker_gray_to_white"
+                            android:textSize="27dp"
+                            tools:ignore="MissingPrefix" />
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_weight="1" />
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.7" />
-            </LinearLayout>
-        </ScrollView>
+                        <ImageButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:layout_gravity="center_vertical"
+                            app:srcCompat="@drawable/heart_empty" />
+
+                        <ImageButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:layout_gravity="center_vertical"
+                            android:scaleType="center"
+                            android:layout_marginRight="15dp"
+                            app:srcCompat="@drawable/bookmark_empty" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/wm"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:fontFamily="@font/pretendard_regular"
+                        android:scrollbars="vertical"
+                        android:text="설명"
+                        android:textColor="@color/darker_gray_to_white"
+                        android:textSize="25dp"
+                        tools:ignore="MissingPrefix" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1.5dp"
+                        android:layout_margin="20dp"
+                        android:background="@color/darker_gray"
+                        />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:paddingBottom="15dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/category"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/aqua_darker_background_round_sharp"
+                            android:fontFamily="@font/pretendard_regular"
+                            android:gravity="center"
+                            android:text="정치"
+                            android:paddingLeft="15dp"
+                            android:paddingRight="15dp"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:textColor="@color/darker_gray"
+                            android:textSize="25dp"/>
+
+                        <TextView
+                            android:id="@+id/hashtag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/aqua_background_round_sharp"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/pretendard_regular"
+                            android:gravity="center_vertical"
+                            android:maxLines="1"
+                            android:paddingLeft="15dp"
+                            android:paddingRight="15dp"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:layout_marginLeft="10dp"
+                            android:paddingStart="10dp"
+                            android:paddingEnd="10dp"
+                            android:text="#해시태그 "
+                            android:textColor="@color/darker_gray"
+                            android:textSize="25dp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </ScrollView>
+
+        </androidx.cardview.widget.CardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
