minor UI modification

--- a/app/src/main/res/layout/activity_word_detail.xml
+++ b/app/src/main/res/layout/activity_word_detail.xml
@@ -70,8 +70,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:background="@android:color/transparent"
-                    app:srcCompat = "@drawable/heart_empty"
-                    android:scaleType="center"
+                    app:srcCompat = "@drawable/heart_filled_50_2"
+                    android:scaleType="fitCenter"
                     app:scale_height="12"
                     app:scale_left="77"
                     app:scale_top="3"
@@ -81,8 +81,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:background="@android:color/transparent"
-                    app:srcCompat = "@drawable/bookmark_empty"
-                    android:scaleType="center"
+                    app:srcCompat = "@drawable/bookmark_filled_50_2"
+                    android:scaleType="fitCenter"
                     app:scale_height="12"
                     app:scale_left="87"
                     app:scale_top="3"
