--- a/app/src/main/res/layout/activity_search_2.xml
+++ b/app/src/main/res/layout/activity_search_2.xml
@@ -48,9 +48,9 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:onClick="back"
-                android:scaleType="center"
-                app:srcCompat="@drawable/back_25"
-
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/back_white"
+                app:tint="@color/darker_gray_to_white"
                 app:scale_height="150"
                 app:scale_left="50"
                 app:scale_top="90"
@@ -88,7 +88,8 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:scaleType="fitXY"
-                app:srcCompat="@drawable/search_2"
+                app:srcCompat="@drawable/search_white"
+                app:tint="@color/darker_gray_to_white"
                 app:scale_height="140"
                 app:scale_left="1900"
                 app:scale_top="90"
