--- a/app/src/main/res/layout/activity_word_more_3.xml
+++ b/app/src/main/res/layout/activity_word_more_3.xml
@@ -62,27 +62,48 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
-
                         <TextView
                             android:id="@+id/wn"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="20dp"
                             android:fontFamily="@font/pretendard_bold"
-                            android:text="단어"
+                            android:text="이 헌법공포 당시의 집dssds"
                             android:textColor="@color/darker_gray_to_white"
                             android:textSize="27dp"
                             tools:ignore="MissingPrefix"/>
+                    </LinearLayout>
 
-                        <View
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_weight="1" />
-
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginEnd="20dp"
+                            android:layout_marginBottom="10dp">
                         <ImageButton
-                            android:layout_width="27dp"
-                            android:layout_height="27dp"
+                            android:id="@+id/textSize"
+                            android:layout_width="26dp"
+                            android:layout_height="26dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/heart"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="10dp"
+                            android:background="@android:color/transparent"
+                            android:scaleType="fitCenter"
+                            app:srcCompat="@drawable/textsize" />
+                        <ImageButton
+
+                            android:id="@+id/heart"
+                            android:layout_width="26dp"
+                            android:layout_height="26dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/bookmark"
                             android:layout_gravity="center"
                             android:layout_marginRight="10dp"
                             android:background="@android:color/transparent"
@@ -90,14 +111,17 @@
                             app:srcCompat="@drawable/heart_filled_50_2" />
 
                         <ImageButton
-                            android:layout_width="27dp"
-                            android:layout_height="27dp"
+                            android:id="@+id/bookmark"
+                            android:layout_width="26dp"
+                            android:layout_height="26dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
                             android:layout_gravity="center"
                             android:background="@android:color/transparent"
                             android:scaleType="fitCenter"
-                            android:layout_marginRight="20dp"
                             app:srcCompat="@drawable/bookmark_filled_50_2" />
-                    </LinearLayout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
                         android:id="@+id/wm"
@@ -114,7 +138,7 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="1.5dp"
+                        android:layout_height="1dp"
                         android:layout_margin="20dp"
                         android:background="@color/darker_gray" />
 
