--- a/app/src/main/res/layout/activity_word_detail.xml
+++ b/app/src/main/res/layout/activity_word_detail.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:background="@color/white">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -30,221 +29,222 @@
     </androidx.appcompat.widget.Toolbar>
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/white_box"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="4dp"
-            app:cardUseCompatPadding="true">
-
-            <com.ssomai.android.scalablelayout.ScalableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:scale_base_height="72"
-                app:scale_base_width="100">
-
-                <TextView
-                    android:id="@+id/wn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="단어"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:textColor="@color/darker_gray_to_white"
-                    app:scale_height="12"
-                    app:scale_left="5"
-                    app:scale_textsize="6"
-                    app:scale_top="3"
-                    app:scale_width="70"
-                    tools:ignore="MissingPrefix"
-                    android:gravity="center_vertical"
-                    android:fontFamily="@font/pretendard_bold"/>
-
-                <ImageButton
-                    android:id="@+id/heart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:background="@android:color/transparent"
-                    app:srcCompat = "@drawable/heart_empty_50_2"
-                    android:scaleType="fitCenter"
-                    app:scale_height="5.5"
-                    app:scale_left="83"
-                    app:scale_top="6.5"
-                    app:scale_width="5.5"/>
-                <ImageButton
-                    android:id="@+id/bookmark"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:background="@android:color/transparent"
-                    app:srcCompat = "@drawable/bookmark_filled_50_2"
-                    android:scaleType="fitCenter"
-                    app:scale_height="5.5"
-                    app:scale_left="89.5"
-                    app:scale_top="6.5"
-                    app:scale_width="5.5"/>
-
-                <TextView
-                    android:id="@+id/wm"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/pretendard_regular"
-                    android:maxLines="2"
-                    android:text="설명"
-                    android:textColor="@color/darker_gray_to_white"
-                    app:scale_height="12"
-                    app:scale_left="5"
-                    app:scale_textsize="5"
-                    app:scale_top="16"
-                    app:scale_width="90"
-                    app:textview_wrapcontent_direction="bottom"
-                    app:textview_wrapcontent_movesiblings="true"
-                    app:textview_wrapcontent_resizesurrounded="true"
-                    tools:ignore="MissingPrefix" />
-
-                <Button
-                    android:id="@+id/more"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="#00ff0000"
-                    android:text="더보기"
-                    android:textColor="@color/darker_gray_to_white"
-                    app:scale_height="11"
-                    app:scale_left="5"
-                    app:scale_textsize="5"
-
-                    app:scale_top="40"
-                    app:scale_width="90"
-                    android:fontFamily="@font/pretendard_regular"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/darker_gray"
-                    app:scale_height="0.2"
-                    app:scale_left="5"
-                    app:scale_top="54"
-                    app:scale_width="90" />
-
-                <TextView
-                    android:id="@+id/category"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/aqua_darker_background_round_sharp"
-                    android:gravity="center"
-                    android:text="정치"
-                    app:scale_height="10"
-                    app:scale_left="5"
-                    app:scale_textsize="4.5"
-                    android:textColor="@color/darker_gray"
-                    app:scale_top="58"
-                    app:scale_width="20"
-                    android:fontFamily="@font/pretendard_regular"/>
-
-                <TextView
-                    android:id="@+id/hashtag"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
-                    android:background="@drawable/aqua_background_round_sharp"
-                    android:textColor="@color/darker_gray"
-                    android:text="#해시태그 #해시태그 #해시"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    app:scale_height="10"
-                    app:scale_left="28"
-                    app:scale_textsize="4.5"
-                    app:scale_top="58"
-                    app:scale_width="49"
-                    android:fontFamily="@font/pretendard_regular"/>
-
-                <ImageView
-                    android:id="@+id/tag_more"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/aqua_background_round_sharp"
-                    android:gravity="center"
-                    android:scaleType="center"
-                    android:src="@drawable/etc_35"
-                    app:scale_height="10"
-                    app:scale_left="80"
-                    app:scale_top="58"
-                    app:scale_width="15" />
-
-
-
-            </com.ssomai.android.scalablelayout.ScalableLayout>
-        </androidx.cardview.widget.CardView>
-
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            app:cardBackgroundColor="@color/white_box"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="4dp"
-            app:cardUseCompatPadding="true">
-
-            <com.ssomai.android.scalablelayout.ScalableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:scale_base_height="70"
-                app:scale_base_width="100">
-
-                <TextView
-                    android:id="@+id/news"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="관련기사"
-                    android:textColor="@color/darker_gray_to_white"
-                    app:scale_height="17"
-                    app:scale_left="5"
-                    app:scale_textsize="6"
-                    app:scale_top="3"
-                    app:scale_width="90"
-                    tools:ignore="MissingPrefix"
-                    android:fontFamily="@font/pretendard_bold"/>
-
-                <TextView
-                    android:id="@+id/news2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="내용"
-                    android:textColor="@color/darker_gray_to_white"
-                    app:scale_height="12"
-                    app:scale_left="5"
-                    app:scale_textsize="5"
-                    app:scale_top="23"
-                    app:scale_width="90"
-                    app:textview_wrapcontent_direction="bottom"
-                    app:textview_wrapcontent_movesiblings="true"
-                    app:textview_wrapcontent_resizesurrounded="true"
-                    tools:ignore="MissingPrefix"
-                    android:fontFamily="@font/pretendard_regular"/>
-
-
-            </com.ssomai.android.scalablelayout.ScalableLayout>
-        </androidx.cardview.widget.CardView>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
+        app:cardBackgroundColor="@color/white_box"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/toolbar">
+
+        <com.ssomai.android.scalablelayout.ScalableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:scale_base_height="120"
+            app:scale_base_width="100">
+
+            <TextView
+                android:id="@+id/wn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="@font/pretendard_bold"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="단어"
+                android:textColor="@color/darker_gray_to_white"
+                app:scale_height="12"
+                app:scale_left="5"
+                app:scale_textsize="6"
+                app:scale_top="3"
+                app:scale_width="70"
+                tools:ignore="MissingPrefix" />
+
+            <ImageButton
+                android:id="@+id/heart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:gravity="center_vertical"
+                android:scaleType="fitCenter"
+                app:scale_height="5.5"
+                app:scale_left="83"
+                app:scale_top="6.5"
+                app:scale_width="5.5"
+                app:srcCompat="@drawable/heart_empty_50_2" />
+
+            <ImageButton
+                android:id="@+id/bookmark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:gravity="center_vertical"
+                android:scaleType="fitCenter"
+                app:scale_height="5.5"
+                app:scale_left="89.5"
+                app:scale_top="6.5"
+                app:scale_width="5.5"
+                app:srcCompat="@drawable/bookmark_filled_50_2" />
+
+            <TextView
+                android:id="@+id/wm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="@font/pretendard_regular"
+                android:maxLines="2"
+                android:text="설명"
+                android:textColor="@color/darker_gray_to_white"
+                app:scale_height="12"
+                app:scale_left="5"
+                app:scale_textsize="5"
+                app:scale_top="16"
+                app:scale_width="90"
+                app:textview_wrapcontent_direction="bottom"
+                app:textview_wrapcontent_movesiblings="true"
+                app:textview_wrapcontent_resizesurrounded="true"
+                tools:ignore="MissingPrefix" />
+
+            <Button
+                android:id="@+id/more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#00ff0000"
+                android:fontFamily="@font/pretendard_regular"
+                android:text="더보기"
+                android:textColor="@color/darker_gray_to_white"
+                app:scale_height="11"
+                app:scale_left="5"
+
+                app:scale_textsize="5"
+                app:scale_top="40"
+                app:scale_width="90" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/darker_gray"
+                app:scale_height="0.2"
+                app:scale_left="5"
+                app:scale_top="54"
+                app:scale_width="90" />
+
+            <TextView
+                android:id="@+id/category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/aqua_darker_background_round_sharp"
+                android:fontFamily="@font/pretendard_regular"
+                android:gravity="center"
+                android:text="정치"
+                android:textColor="@color/darker_gray"
+                app:scale_height="10"
+                app:scale_left="5"
+                app:scale_textsize="4.5"
+                app:scale_top="58"
+                app:scale_width="20" />
+
+            <TextView
+                android:id="@+id/hashtag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/aqua_background_round_sharp"
+                android:ellipsize="end"
+                android:fontFamily="@font/pretendard_regular"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="#해시태그 #해시태그 #해시"
+                android:textColor="@color/darker_gray"
+                app:scale_height="10"
+                app:scale_left="28"
+                app:scale_textsize="4.5"
+                app:scale_top="58"
+                app:scale_width="49" />
+
+            <ImageView
+                android:id="@+id/tag_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/aqua_background_round_sharp"
+                android:gravity="center"
+                android:scaleType="center"
+                android:src="@drawable/etc_35"
+                app:scale_height="10"
+                app:scale_left="80"
+                app:scale_top="58"
+                app:scale_width="15" />
+
+
+        </com.ssomai.android.scalablelayout.ScalableLayout>
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        app:cardBackgroundColor="@color/white_box"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toTopOf="@id/frame_bottombar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.ssomai.android.scalablelayout.ScalableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:scale_base_height="50"
+            app:scale_base_width="100">
+
+            <TextView
+                android:id="@+id/news"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/pretendard_bold"
+                android:text="관련기사"
+                android:textColor="@color/darker_gray_to_white"
+                app:scale_height="12"
+                app:scale_left="5"
+                app:scale_textsize="6"
+                app:scale_top="3"
+                app:scale_width="90"
+                tools:ignore="MissingPrefix" />
+
+            <TextView
+                android:id="@+id/news2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="@font/pretendard_regular"
+                android:maxLines="1"
+                android:text="내용"
+                android:textColor="@color/darker_gray_to_white"
+                app:scale_height="12"
+                app:scale_left="5"
+                app:scale_textsize="5"
+                app:scale_top="16"
+                app:scale_width="90"
+                app:textview_wrapcontent_direction="bottom"
+                app:textview_wrapcontent_movesiblings="true"
+                app:textview_wrapcontent_resizesurrounded="true"
+                tools:ignore="MissingPrefix" />
+
+
+        </com.ssomai.android.scalablelayout.ScalableLayout>
+    </androidx.cardview.widget.CardView>
+
 
         <FrameLayout
             android:id="@+id/frame_bottombar"
@@ -314,4 +314,3 @@
         </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
