--- a/app/src/main/res/layout/activity_word_detail_3.xml
+++ b/app/src/main/res/layout/activity_word_detail_3.xml
@@ -154,7 +154,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/category"
+                            android:id="@+id/category_box"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/aqua_darker_background_round_sharp"
