now user can see detail explanation of terms by clicking words in recent quiz page

--- a/app/src/main/res/layout/activity_main_2_1.xml
+++ b/app/src/main/res/layout/activity_main_2_1.xml
@@ -74,7 +74,7 @@
                     android:clickable="true"
                     android:gravity="start|center_vertical"
                     android:paddingStart="10dp"
-                    android:text="오늘의 베스트 단어"
+                    android:text="오늘의 추천 단어"
                     android:textColor="@color/darker_gray_to_white"
                     android:textStyle="bold"
                     app:scale_height="60"
@@ -471,10 +471,11 @@
                     android:id="@+id/question"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="5dp"
+                    android:gravity="center_vertical"
+                    android:padding="10dp"
                     android:background="@color/aqua"
                     android:text="문제 나갑니다! \n아직 나가는 중일지도?"
+                    android:scrollbars="vertical"
                     android:textColor="@color/darker_gray"
                     android:textStyle="bold"
                     app:scale_height="100"
