--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -59,7 +59,7 @@
             android:id="@+id/email_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="abcdefg@mail.com"
+            android:hint="이메일"
             android:inputType="textEmailAddress"
             android:paddingStart="20dp"
             app:scale_height="50"
